c: fix(css): add additional css to better align

--- a/src/app/recipes/recipes.component.scss
+++ b/src/app/recipes/recipes.component.scss
@@ -14,18 +14,27 @@ dl {
 }
 
 mat-card {
+
   text-shadow: 1px 1px lightgrey;
+
   button {
     color: white;
   }
+
   .like-btn {
     background-color: var(--prime);
   }
+
   .edit-btn{
     background-color: var(--second);
   }
+
   img {
     border-radius: 5px;
     box-shadow: 0.25vw 0.5vh lightgrey;
+  }
+
+  mat-card-content {
+    margin: 2vh 2vw;
   }
 }
