--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-.example-spacer {
+.spacer {
     flex: 1 1 auto;
 }
 
